# jcu-jvm

./: CMakeLists.txt  README.md
inc/jcu-jvm/: jvm_library.h  memory_pool.h  os_handler.h  pointer_ref.h  vm.h
src/: intl_cfunc.h  intl_utils.cc  intl_utils.h  jvm_helper_test.cc  jvm_library_base.cc  simple_memory_pool.cc  simple_memory_pool.h  vm.cc
src/plat-unix/: dso-dlfcn.c  dso-dyld.c  dso.h  location.c  location.h  os_handler_unix.cc
src/plat-win/: os_handler_win.cc
